# habermas-mirror

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BFT_NOTE.md
scripts/: publish.sh
src/habermas_mirror/: __init__.py  cli.py  db.py  facilitator.py  llm.py  main.py  models.py
src/habermas_mirror/api/: facilitate.py  opinions.py
src/habermas_mirror/prompts/: critique.md  draft.md  refine.md
tests/: test_facilitator.py  test_release_invariants.py  test_smoke.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
