[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "habermas-mirror"
version = "0.0.1"
description = "Self-hostable reference re-implementation of the prompted Habermas Machine deliberation facilitator (Tessler et al., Science 2024)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "habermas-mirror contributors" },
]
keywords = [
  "deliberation",
  "habermas",
  "llm",
  "facilitation",
  "litellm",
  "fastapi",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "litellm>=1.50",
  "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
habermas-mirror = "habermas_mirror.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/habermas_mirror"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
